--- a/www/debug.html
+++ b/www/debug.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
+<script src="stats.min.js"></script>
+<script>
+    var stats = new Stats();
+    stats.setMode(0); // 0: fps, 1: ms
+
+    // align top-left
+    stats.domElement.style.position = 'absolute';
+    stats.domElement.style.left = '0px';
+    stats.domElement.style.top = '0px';
+
+    document.body.appendChild(stats.domElement);
+
+</script>
+
 <script src="console-log-viewer.js"></script>
 
 <script src="js/lib/howler.js"></script>
@@ -15,6 +29,7 @@
 <script src="js/utils/concatenateProperties.js"></script>
 <script src="js/utils/getFunctionName.js"></script>
 <script src="js/utils/Vectors.js"></script>
+<script src="js/platform/getDevicePixelRatio.js"></script>
 
 <script src="js/net/resolveAtlasPaths.js"></script>
 
@@ -75,6 +90,7 @@
 <script src="js/platform/requestAnimFrame.js"></script>
 <script src="js/platform/BrowserOracle.js"></script>
 <script src="js/platform/FullScreenController.js"></script>
+<script src="js/platform/ScreenOrientation.js"></script>
 
 <script src="js/input/entity/Touchable.js"></script>
 <script src="js/input/entity/Touchables.js"></script>
@@ -134,6 +150,9 @@
 <script src="js/render/ImageCache.js"></script>
 <script src="js/render/AtlasCache.js"></script>
 
+<script src="js/input/bootstrap/installOneTimeTap.js"></script>
+<script src="js/scene/myscenes/SplashScreen.js"></script>
+<script src="js/scene/myscenes/Settings.js"></script>
 <script src="js/scene/myscenes/Credits.js"></script>
 <script src="js/utils/range.js"></script>
 <script src="js/scene/component/ObstaclesView.js"></script>
@@ -150,7 +169,7 @@
 <script src="js/scene/myscenes/StartingPosition.js"></script>
 <script src="js/scene/SceneManager.js"></script>
 <script src="js/scene/myscenes/installMyScenes.js"></script>
-<script src="js/app/GameLoop.js"></script>
+<script src="DebugGameLoop.js"></script>
 <script src="js/app/bootstrap/installLoop.js"></script>
 <script src="js/render/bootstrap/StageFactory.js"></script>
 <script src="js/render/bootstrap/AtlasResourceHelper.js"></script>
