--- a/www/index.html
+++ b/www/index.html
@@ -136,6 +136,7 @@
 <script src="js/render/AtlasCache.js"></script>
 
 <script src="js/input/bootstrap/installOneTimeTap.js"></script>
+<script src="js/screen/Orientation.js"></script>
 <script src="js/scene/myscenes/SplashScreen.js"></script>
 <script src="js/scene/myscenes/Settings.js"></script>
 <script src="js/scene/myscenes/Credits.js"></script>
@@ -163,10 +164,13 @@
 <script src="js/screen/ResizeHandler.js"></script>
 <script src="js/screen/ResizeBus.js"></script>
 <script src="js/screen/SimpleLoadingScreen.js"></script>
+<script src="js/screen/OrientationBus.js"></script>
+<script src="js/screen/OrientationHandler.js"></script>
 <script src="js/net/ResourceLoader.js"></script>
 <script src="js/platform/bootstrap/installCanvas.js"></script>
 <script src="js/input/bootstrap/installPushRelease.js"></script>
 <script src="js/screen/bootstrap/installResize.js"></script>
+<script src="js/screen/bootstrap/installOrientation.js"></script>
 <script src="js/input/bootstrap/installTap.js"></script>
 <script src="js/input/bootstrap/installKeyBoard.js"></script>
 <script src="js/input/bootstrap/installGamePad.js"></script>
