--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,9 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Crappy Space Miner</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
