--- a/www/debug.html
+++ b/www/debug.html
@@ -88,7 +88,7 @@
 <script src="js/platform/UniversalTranslator.js"></script>
 <script src="js/platform/addFontToDOM.js"></script>
 <script src="js/platform/requestAnimFrame.js"></script>
-<script src="js/platform/BrowserOracle.js"></script>
+<script src="js/platform/DeviceInfo.js"></script>
 <script src="js/screen/FullScreenController.js"></script>
 <script src="js/screen/OrientationLock.js"></script>
 
