--- a/www/index.html
+++ b/www/index.html
@@ -75,7 +75,7 @@
 <script src="js/platform/UniversalTranslator.js"></script>
 <script src="js/platform/addFontToDOM.js"></script>
 <script src="js/platform/requestAnimFrame.js"></script>
-<script src="js/platform/BrowserOracle.js"></script>
+<script src="js/platform/DeviceInfo.js"></script>
 <script src="js/screen/FullScreenController.js"></script>
 <script src="js/screen/OrientationLock.js"></script>
 
@@ -139,10 +139,11 @@
 
 <script src="js/input/bootstrap/installOneTimeTap.js"></script>
 <script src="js/screen/Orientation.js"></script>
+<script src="js/scene/myscenes/Settings.js"></script>
+<script src="js/scene/myscenes/showSettings.js"></script>
 <script src="js/scene/myscenes/SplashScreen.js"></script>
 <script src="js/scene/myscenes/RotateDevice.js"></script>
 <script src="js/scene/myscenes/GoFullScreen.js"></script>
-<script src="js/scene/myscenes/Settings.js"></script>
 <script src="js/scene/myscenes/Credits.js"></script>
 <script src="js/utils/range.js"></script>
 <script src="js/scene/component/ObstaclesView.js"></script>
