--- a/www/debug.html
+++ b/www/debug.html
@@ -22,7 +22,6 @@
 </script>
 
 <script src="debug/console-log-viewer.js"></script>
-<
 <script src="js/lib/howler.js"></script>
 <script src="js/utils/iterateEntries.js"></script>
 <script src="js/utils/iterateSomeEntries.js"></script>
@@ -98,8 +97,13 @@
 <script src="js/input/isHit.js"></script>
 <script src="js/input/entity/GamePad.js"></script>
 <script src="js/input/entity/Key.js"></script>
+<script src="js/input/entity/WiiUGamePad.js"></script>
+<script src="js/input/entity/WiiURemote.js"></script>
 <script src="js/input/KeyHandler.js"></script>
 <script src="js/input/GamePadHandler.js"></script>
+<script src="js/input/WiiUGamePadHandler.js"></script>
+<script src="js/input/PointerHandler.js"></script>
+<script src="js/input/TapManager.js"></script>
 
 <script src="js/render/intern/measureText.js"></script>
 <script src="js/render/intern/draw/entity/SubImage.js"></script>
@@ -188,6 +192,7 @@
 <script src="js/screen/bootstrap/installResize.js"></script>
 <script src="js/screen/bootstrap/installOrientation.js"></script>
 <script src="js/screen/bootstrap/installFullScreen.js"></script>
+<script src="js/input/bootstrap/installPointer.js"></script>
 <script src="js/input/bootstrap/installKeyBoard.js"></script>
 <script src="js/input/bootstrap/installGamePad.js"></script>
 <script src="js/app/EventBus.js"></script>
