--- a/www/index.html
+++ b/www/index.html
@@ -85,8 +85,11 @@
 <script src="js/input/isHit.js"></script>
 <script src="js/input/entity/GamePad.js"></script>
 <script src="js/input/entity/Key.js"></script>
+<script src="js/input/entity/WiiUGamePad.js"></script>
+<script src="js/input/entity/WiiURemote.js"></script>
 <script src="js/input/KeyHandler.js"></script>
 <script src="js/input/GamePadHandler.js"></script>
+<script src="js/input/WiiUGamePadHandler.js"></script>
 <script src="js/input/PointerHandler.js"></script>
 <script src="js/input/TapManager.js"></script>
 
