--- a/www/index.html
+++ b/www/index.html
@@ -87,9 +87,11 @@
 <script src="js/input/entity/Key.js"></script>
 <script src="js/input/entity/WiiUGamePad.js"></script>
 <script src="js/input/entity/WiiURemote.js"></script>
+<script src="js/input/entity/OuyaGamePad.js"></script>
 <script src="js/input/KeyHandler.js"></script>
 <script src="js/input/GamePadHandler.js"></script>
 <script src="js/input/WiiUGamePadHandler.js"></script>
+<script src="js/input/OuyaGamePadHandler.js"></script>
 <script src="js/input/PointerHandler.js"></script>
 <script src="js/input/TapManager.js"></script>
 
