--- a/www/index.html
+++ b/www/index.html
@@ -159,6 +159,7 @@
 
 <script src="js/myscenes/Settings.js"></script>
 <script src="js/myscenes/showSettings.js"></script>
+<script src="js/myscenes/ShowSettingsEvented.js"></script>
 <script src="js/myscenes/Credits.js"></script>
 <script src="js/myscenes/GetReady.js"></script>
 <script src="js/myscenes/GoFullScreen.js"></script>
