--- a/www/debug.html
+++ b/www/debug.html
@@ -156,9 +156,9 @@
 <script src="js/myscenes/viewhelper/EnergyBar.js"></script>
 <script src="js/myscenes/viewhelper/drawSharedGameStuff.js"></script>
 
-<script src="js/myscenes/Settings.js"></script>
-<script src="js/myscenes/showSettings.js"></script>
-<script src="js/myscenes/ShowSettingsEvented.js"></script>
+<script src="js/myscenes/Menu.js"></script>
+<script src="js/myscenes/showMenu.js"></script>
+<script src="js/myscenes/ShowMenuEvented.js"></script>
 <script src="js/myscenes/Credits.js"></script>
 <script src="js/myscenes/GetReady.js"></script>
 <script src="js/myscenes/GoFullScreen.js"></script>
