--- a/www/index.html
+++ b/www/index.html
@@ -173,6 +173,7 @@
 <script src="js/myscenes/viewhelper/EnergyBar.js"></script>
 <script src="js/myscenes/viewhelper/drawSharedGameStuff.js"></script>
 
+<script src="js/myscenes/GetReadyTutorial.js"></script>
 <script src="js/myscenes/Achievements.js"></script>
 <script src="js/myscenes/Credits.js"></script>
 <script src="js/myscenes/Settings.js"></script>
