--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Crappy Space Miner</title>
+    <title>Shields Up</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
     <link rel="icon" href="favicon.ico">
     <meta name="apple-mobile-web-app-capable" content="yes">
