--- a/www/index.html
+++ b/www/index.html
@@ -175,6 +175,7 @@
 <script src="js/myscenes/viewhelper/drawPauseButton.js"></script>
 
 <script src="js/myscenes/GetReadyTutorial.js"></script>
+<script src="js/myscenes/EnergyTutorial.js"></script>
 <script src="js/myscenes/Achievements.js"></script>
 <script src="js/myscenes/Credits.js"></script>
 <script src="js/myscenes/Settings.js"></script>
